k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-demo
  labels:
    name: k8s-demo
    app.kubernetes.io/name: k8s-demo
    app.kubernetes.io/part-of: k8s-demo
