k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: demo
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
