k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-frontend-service
  namespace: k8s-demo
  labels:
    app: k8s-demo-frontend
    app.kubernetes.io/name: k8s-demo-frontend
    app.kubernetes.io/part-of: k8s-demo
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: k8s-demo-frontend
